--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -1,1 +1,26 @@
+name: Python Script Workflow
+
+on:
+  push:
+    branches:
+      - main  # TODO edit this with chrono
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: python/setup-python@v2
+      with:
+        python-version: '3.10'  # Specify the Python version you need (e.g., '3.8', '3.9', '3.10')
+
+    - name: Install Dependencies
+      run: pip install -r requirements.txt  # If you have a requirements.txt file
+
+    - name: Run Python Script
+      run: python your_script.py  # Replace with the actual command to run your script
 
