--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -1,9 +1,8 @@
 name: Python Script Workflow
 
 on:
-  push:
-    branches:
-      - main  # TODO edit this with chrono
+  schedule:
+    - cron: '*/2 * * * *'  # Run every 2 minutes
 
 jobs:
   build:
@@ -22,5 +21,5 @@ jobs:
       run: pip install -r requirements.txt  # If you have a requirements.txt file
 
     - name: Run Python Script
-      run: python your_script.py  # Replace with the actual command to run your script
+      run: python main.py  # Replace with the actual command to run your script
 
