--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: python/setup-python@v4
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'  # Specify the Python version you need (e.g., '3.8', '3.9', '3.10')
 
