--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -27,9 +27,15 @@ jobs:
     - name: Stage JSON File
       run: git add output.json  # Replace with the correct file path
 
-    - name: Commit Changes
+    - name: commit files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -m "Add JSON data"
-        git push
+        git add -A
+        git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+          
+    - name: push changes
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main 
