--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -3,6 +3,7 @@ name: Python Script Workflow
 on:
   schedule:
     - cron: '*/8 * * * *' # every 8 minutes
+  workflow_dispatch: # This allows manual triggering
 
 jobs:
   build:
